# mdbook-frontmatter

./: .gitignore  Cargo.toml  README.md  package.json
docs/src/: README.md  SUMMARY.md  data-flow.md
docs/src/adr/: 001-frontmatter-validation.md  README.md
src/: config.rs  error.rs  lib.rs  main.rs  preprocessor.rs  schema.rs
